--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bulbasaur": "node database/initializer.js",
     "start": "nodemon server/index.js",
     "test": "jest test/test.js",
-    "review-server" : "node database/initializer.js && node server/index.js"
+    "review-server": "node database/initializer.js && node server/index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -22,11 +22,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-highlight-words": "^0.16.0",
-    "react-promise": "^3.0.2",
-    "casual": "^1.6.0"
+    "react-promise": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.0",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
@@ -37,9 +35,11 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
+    "faker": "^4.1.0",
     "file-system": "^2.2.2",
     "jest": "^24.8.0",
     "mongoose-auto-increment": "^5.0.1",
+    "nodemon": "^1.19.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
