--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "newrelic": "^6.4.1",
     "pg": "^7.18.2",
     "pg-pool": "^2.0.10",
     "react": "^16.8.6",
